image picker stuff, android not configured

--- a/ios/SarpaV4/Info.plist
+++ b/ios/SarpaV4/Info.plist
@@ -33,6 +33,10 @@
     </array>
     <key>CFBundleVersion</key>
     <string>1</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>Sarpa needs your permission to access the gallery.</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Sarpa needs your permission to access the camera.</string>
     <key>LSRequiresIPhoneOS</key>
     <true/>
     <key>NSAppTransportSecurity</key>
