--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-image-crop-picker": "^0.41.2",
+    "react-native-pager-view": "6.3.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-tab-view": "^3.5.2",
-    "react-native-pager-view": "6.3.0"
+    "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
