--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.28",
     "expo-font": "~12.0.10",
     "expo-status-bar": "~1.12.1",
@@ -19,6 +20,7 @@
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-image-crop-picker": "^0.41.2",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-pager-view": "6.3.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
