--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-image-crop-picker": "^0.41.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-pager-view": "6.3.0",
     "react-native-safe-area-context": "4.10.5",
