android build failing tho

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -37,5 +37,8 @@ allprojects {
         google()
         mavenCentral()
         maven { url 'https://www.jitpack.io' }
+
+         // ADD THIS
+        maven { url 'https://maven.google.com' }
     }
 }
